--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 	<body>
 		<!--<img src ="./profile logo.png" alt="profile pic"/>-->   <!--Relative path-->
 		<img src ="C:\Users\hi\OneDrive\Desktop\images\profile logo.png" alt="profile pic"/>    <!--Absolute path-->
-		<img src ="https://kmit.in/assets/DR.G.NARENDER.jpeg" alt="profile pic"/>
-		<p>
-		<img src ="https://kmit.in/assets/MR.K.ANIL.jpeg" alt="profile pic"/>                  <!--using url-->
-		</p>   <!--using paragraph it goes to next element-->
+		<img src ="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw2v5ZyEVl5c9uEMKF6lahtj&ust=1718167855933000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMju_prg0oYDFQAAAAAdAAAAABAE" alt="profile pic"/>
 		<h2> Deekshitha </h2>
 		<p>
 		email id : deeksha.leo123@gmail.com
